linux-tools (3.16-3) UNRELEASED; urgency=low

  * linux-tools: Fix build configuration to avoid linking perf with libbfd
    (Closes: #763002)
  * linux-tools: Add a check that perf is not linked with libbfd

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 27 Sep 2014 02:39:21 +0100

linux-tools (3.16-2) unstable; urgency=medium

  * linux-kbuild: Change the type headers used for devicetable-offsets.c
    to avoid depending on UAPI headers or <linux/types.h>.  This really
    closes: #754213.  It also fixes modpost handling of input device IDs
    when host and target have differing word size.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 09 Sep 2014 13:21:05 +0100

linux-tools (3.16-1) unstable; urgency=medium

  * New upstream release

  [ Mauricio Faria de Oliveira ]
  * [ppc64el] Build linux-tools binary package (Closes: #754213)

  [ Ben Hutchings ]
  * linux-kbuild: Build and install recordmcount and recordmcount.pl,
    needed for kernels with DYNAMIC_FTRACE enabled
  * linux-kbuild: Fix recordmcount dependency for OOT modules

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 08 Sep 2014 18:45:06 +0100

linux-tools (3.16~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * genorig: Include new directory for usbip UAPI header
  * debian/control: Update Build-Depends for usbip switching from
    libsysfs to libudev
  * perf: Build with V=1 as V=2 no longer works
  * perf: Change build command to avoid a rebuild during 'make install'
  * linux-tools: Install traceevent plugins in
    /usr/lib/traceevent_<version>/plugins (Closes: #756429)
  * linux-kbuild: Install scripts/Makefile.extrawarn

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Jul 2014 21:11:10 +0100

linux-tools (3.14-1) unstable; urgency=medium

  * New upstream release

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 28 Apr 2014 17:46:24 +0100

linux-tools (3.14~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate
