@@ -3,6 +3,7 @@ linux-tools (3.16-3) UNRELEASED; urgency=low
   * linux-tools: Fix build configuration to avoid linking perf with libbfd
     (Closes: #763002)
   * linux-tools: Add a check that perf is not linked with libbfd
+  * [armel,armhf] linux-tools: Enable use of libunwind
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 27 Sep 2014 02:39:21 +0100
 
